--- a/project-03/package.json
+++ b/project-03/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "dev:server": "json-server server.json -w -d 500",
     "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint src --ext ts,tsx",
+    "lint:fix": "eslint src --ext ts,tsx --fix",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -19,10 +20,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
+    "scheduler": "^0.23.0",
     "styled-components": "^6.0.1",
+    "use-context-selector": "^1.4.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^1.2.0",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
@@ -33,7 +37,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "json-server": "^0.17.3",
-    "typescript": "^5.0.2",
+    "typescript": "^5.0.0",
     "vite": "^4.3.9"
   }
 }
