--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "project-03",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://github.com/Gabriel-Leal/project-03",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "dev:server": "json-server server.json -w -d 500",
     "build": "tsc && vite build",
@@ -36,6 +39,7 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "gh-pages": "^5.0.0",
     "json-server": "^0.17.3",
     "typescript": "^5.0.0",
     "vite": "^4.3.9"
